# experimental

./: .gitignore  README.md  close_building_coordinates.csv  close_building_coordinates.json  go.mod  go.sum  main1.py  main3.py  main6.py  test.html  tt.go  weather.txt
audio-capture-streaming/: README.md  audio_capture.go  go.mod  index.html
brah/: main.go
capture-network-packets/: README.md  main.go
crawler/: main.py
damn/: main.go  main.py
device-capturing-0/: README.md  t.go
fingerprinting/: README.md  dump.json  go.mod  main.go
google-map-building-query/: README.md  main.py  main2.py  test.html
minimal-data/: client.py  server.py  util.py
satelite-image-recon/: README.md  main4.py  main5.py
secure-communication-socket/: README.md
trafficker/: captured_traffic.pcap
trafficker/proxy/: proxy.go
tt/: main.go
worldgen/: .gitignore  README.md  pyproject.toml  requirements.txt
worldgen/examples/: run_demo.py
worldgen/tests/: default.py
worldgen/worldgen/: chunk.py  world.py
worldgen/worldgen.egg-info/: PKG-INFO  SOURCES.txt
